dev/service.yaml
apiVersion: v2
kind: Service
metadata:
  name: wil-app-service
spec:
  type: LoadBalancer
  selector:
    app: wil-app
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 8888
